--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "install": "cd client && npm install && cd server && npm istall",
     "start": "cd server && npm run start",
