fixed typo in install script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install": "cd client && npm install && cd server && npm istall",
+    "install": "cd client && npm install && cd ../server && npm install",
     "start": "cd server && npm run start",
     "dev": "concurrently -n client.server \"cd client && npm run dev\" \" cd server && npm run dev\"",
     "build": "cd client && npm run build"
