--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vitejs/plugin-react": "^4.1.1",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
     "vite": "^4.5.0"
