--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
+    "react-router-dom": "^6.18.0",
     "vite": "^4.5.0"
   }
 }
