--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "eslint-config-wesbos": "^3.2.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "react-router-dom": "^6.18.0",
     "vite": "^4.5.0"
