--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^4.1.1",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
     "eslint-config-wesbos": "^3.2.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
