--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js"
-
-
   },
   "keywords": [],
   "author": "",
@@ -16,6 +14,7 @@
   "dependencies": {
     "@apollo/server": "^4.9.5",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
