--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-wesbos": "^3.2.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
+    "react-router-dom": "^6.18.0",
     "vite": "^4.5.0"
   },
   "devDependencies": {
