--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "react-router-dom": "^6.18.0",
+    "uuid": "^9.0.1",
     "vite": "^4.5.0"
   },
   "devDependencies": {
