--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "@vitejs/plugin-react": "^4.1.1",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
@@ -24,6 +27,7 @@
     "eslint-config-wesbos": "^3.2.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
+    "react-bootstrap": "^2.10.1",
     "react-router-dom": "^6.18.0",
     "uuid": "^9.0.1",
     "vite": "^4.5.0"
